# lox-interpreter

./: .gitignore  CMakeLists.txt  README.md  ast.h  main.cpp  parser.cpp  parser.h  scanner.cpp  token.h  token_type.h
example/: CMakeLists.txt  visitor.cpp
lox-example-programs/: calcfib.l  demo_func.l  factorial.l  forloop.l  func.l  loop.l  print_fibonacci.l  recur_count.l  scope.l
src/: CMakeLists.txt  ast.h  ast_printer.cpp  ast_printer.h  environment.cpp  environment.h  environment.hpp  interpreter.cpp  interpreter.h  interpreter.hpp  lox.hpp  lox_exception.hpp  lox_function.cpp  lox_function.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.cpp  token_type.h  value.cpp  value.h  value.hpp
